--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -142,80 +142,82 @@
         <section class="consequences" style="background-image: url(assets/img/bg112.png);">
             <div class="container">
                 <div class="section__heading color_white">
-                    <h2 class="consequences-title heading heading_h1">
-                        Ряд ускладнень, які можуть виникнути
-                        у пацієнтів будь-якого віку і статі
+                    <h2 class="heading_h1">
+                        Сечокам'яна хвороба, якщо вчасно не надати допомогу,
+                        може призвести до більш серйозних наслідків:
                     </h2>
                 </div>
                 <ul class="consequences-list text_md">
                     <li class="consequences-list__item frosted">
-                        ниркова <br>
+                        Проникнення, розвиток
+                        і поширення інфекцій
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        Пієлонефрит та інші захворювання нирок
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        Проблеми з кишечником
+                        - зокрема, парез
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        Скупчення
+                        гнійних утворень
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        Ниркова <br>
                         недостатність
                     </li>
                     <li class="consequences-list__item frosted">
-                        зараження <br>
-                        крові (сепсис)
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        гнійне ураження <br>
-                        нирки (карбункул)
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        гіпертонічні <br>
-                        напади
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        рубцювання <br>
-                        нирки
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        ксантогрануломатоз нирки
+                        Бактеріальний <br>
+                        шок
                     </li>
                 </ul>
-                <div class="block-more-info block-more-info_white text_md hide-info">
-                    <p>
-                        Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
-                        неправильній
-                        постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
-                        років,
-                        жінки будь-якого віку, а також літні чоловіки в віці від 55
-                    </p>
-                    <p>
-                        Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних
-                        захворювань.
-                        Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом
-                        гострий
-                        пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися
-                        пієлонефрит
-                        при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
-                        схильна до 1 з кожних 10 жінок.
-                    </p>
-                    <p>
-                        Факторами ризику можуть бути також:
-                    </p>
+                <div class="spoiler one">
+                    <div class="block-more-info block-more-info_white text_md hide-info">
+                        <p>
+                            Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
+                            неправильній
+                            постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до
+                            7
+                            років,
+                            жінки будь-якого віку, а також літні чоловіки в віці від 55
+                        </p>
+                        <p>
+                            Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних
+                            захворювань.
+                            Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом
+                            гострий
+                            пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися
+                            пієлонефрит
+                            при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до
+                            якого
+                            схильна до 1 з кожних 10 жінок.
+                        </p>
+                        <p>
+                            Факторами ризику можуть бути також:
+                        </p>
 
-                    <ul>
-                        <li>
-                            вроджені аномалії органів (уретра, нирки, сечовий міхур);
-                        </li>
-                        <li>
-                            операції в області сечовидільної системи;
-                        </li>
-                        <li>
-                            установка катетера в сечовий міхур;
-                        </li>
-                        <li>
-                            травма спинного мозку
-                        </li>
-                        <li>
-                            випадання матки;
-                        </li>
-                        <li>
-                            СНІД.
-                        </li>
-                    </ul>
-                </div>
-                <div class="wrap-btn">
+                        <ul>
+                            <li>
+                                вроджені аномалії органів (уретра, нирки, сечовий міхур);
+                            </li>
+                            <li>
+                                операції в області сечовидільної системи;
+                            </li>
+                            <li>
+                                установка катетера в сечовий міхур;
+                            </li>
+                            <li>
+                                травма спинного мозку
+                            </li>
+                            <li>
+                                випадання матки;
+                            </li>
+                            <li>
+                                СНІД.
+                            </li>
+                        </ul>
+                    </div>
                     <button class="show-more btn btn_glass">Більше інформації</button>
                 </div>
             </div>
