--- a/cystitis.html
+++ b/cystitis.html
@@ -204,29 +204,38 @@
                     </div>
 
                 </div>
-                <div class="block-more-info block-more-info_white text_md hide-info">
-                    <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна та
-                        фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються антибіотики
-                        при
-                        пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
+                <div class="spoiler">
+                    <div class="block-more-info block-more-info_white text_md hide-info">
+                        <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
+                            та
+                            фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються
+                            антибіотики
+                            при
+                            пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
 
-                    <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
-                        сечовипускання.
-                        Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку комплексної
-                        терапії ступінь проявів симптомів знижується.</p>
+                        <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
+                            сечовипускання.
+                            Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку
+                            комплексної
+                            терапії ступінь проявів симптомів знижується.</p>
 
-                    <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках. Ремісія
-                        періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під час
-                        ремісії
-                        обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
+                        <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках.
+                            Ремісія
+                            періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під
+                            час
+                            ремісії
+                            обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
 
-                    <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть виникати
-                        через переохолодження. Дотримання рухової активності і режиму харчування можуть принести користь і
-                        на
-                        чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення пієлонефриту.</p>
-                </div>
-                <div class="wrap-btn">
-                    <button class="show-more btn btn_glass">Більше інформації</button>
+                        <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть
+                            виникати
+                            через переохолодження. Дотримання рухової активності і режиму харчування можуть принести
+                            користь
+                            і
+                            на
+                            чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
+                            пієлонефриту.</p>
+                    </div>
+                    <button class="show-more btn btn_glass ">Більше інформації</button>
                 </div>
             </div>
         </section>
