--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -137,6 +137,39 @@
                     </li>
 
                 </ul>
+                <div class="spoiler spoiler_light-bg">
+                    <div class="block-more-info text_md">
+                        <p> Для захворювання характерний гострий початок з сильним нездужанням. З цієї причини загальний
+                            стан
+                            пацієнта нагадує застуду. Далі пієлонефрит симптоми може варіювати, що залежить від форми
+                            хвороби.</p>
+
+                        <p>Один з характерних ознак - сеча при пієлонефриті з різким запахом через розвиток інфекції.
+                            Стан
+                            пацієнта може погіршуватися також відрижкою, м'язовою слабкістю і появою набряків. Шкірна на
+                            тлі
+                            інтоксикації організму бліда.</p>
+
+                        <p>Симптоми пієлонефриту досить схожі з іншими патологічними станами, що ускладнює його
+                            діагностику.
+                            Болі в області нирок - один із симптомів, який повинен насторожити і стати приводом для
+                            звернення до
+                            лікаря. Обстежитися необхідно як при гострих станах, так і при затяжному перебігу хвороби.
+                            Добре
+                            маскується хронічний пієлонефрит під тривалу застуду, гінекологічні захворювання.</p>
+
+                        <p>Звернутися до лікаря необхідно і при проблемах з відтоком сечі. Нез'ясована причина цього
+                            факту є
+                            постійним вогнищем для виникнення бактеріальної інфекції. Про її початок може свідчити
+                            різкий і
+                            неприємний запах сечі. Лікування в таких випадках має починатися негайно.</p>
+
+                        <p>Це допоможе уникнути структурних змін в нирках. Поява кров'яних включень, підвищення рівня
+                            білка
+                            в аналізі сечі, ниркові коліки - також причини для візиту до уролога.</p>
+                    </div>
+                        <button class="show-more btn btn_glass ">Більше інформації</button>
+                </div>
             </div>
         </section>
         <section class="consequences" style="background-image: url(assets/img/bg112.png);">
@@ -173,7 +206,7 @@
                     </li>
                 </ul>
                 <div class="spoiler one">
-                    <div class="block-more-info block-more-info_white text_md hide-info">
+                    <div class="block-more-info block-more-info_white text_md">
                         <p>
                             Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
                             неправильній
@@ -314,7 +347,7 @@
 
                 </div>
                 <div class="spoiler">
-                    <div class="block-more-info block-more-info_white text_md hide-info">
+                    <div class="block-more-info block-more-info_white text_md">
                         <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
                             та
                             фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються
