--- a/cystitis.html
+++ b/cystitis.html
@@ -204,7 +204,7 @@
                     </div>
 
                 </div>
-                <div class="spoiler">
+                <div class="toggle-content">
                     <div class="block-more-info block-more-info_white text_md hide-info">
                         <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
                             та
@@ -235,7 +235,8 @@
                             чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
                             пієлонефриту.</p>
                     </div>
-                    <button class="show-more btn btn_glass ">Більше інформації</button>
+
+                    <button data-open-text="Закрити" data-default-text="Більше інформації" class="show-more btn btn_glass ">Більше інформації</button>
                 </div>
             </div>
         </section>
