--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -137,7 +137,7 @@
                     </li>
 
                 </ul>
-                <div class="spoiler spoiler_light-bg">
+                <div class="toggle-content toggle-content_light-bg">
                     <div class="block-more-info text_md">
                         <p> Для захворювання характерний гострий початок з сильним нездужанням. З цієї причини загальний
                             стан
@@ -168,7 +168,8 @@
                             білка
                             в аналізі сечі, ниркові коліки - також причини для візиту до уролога.</p>
                     </div>
-                        <button class="show-more btn btn_glass ">Більше інформації</button>
+
+                    <button data-open-text="Закрити" data-default-text="Більше інформації" class="show-more btn btn_glass ">Більше інформації</button>
                 </div>
             </div>
         </section>
@@ -205,7 +206,7 @@
                         шок
                     </li>
                 </ul>
-                <div class="spoiler one">
+                <div class="toggle-content one">
                     <div class="block-more-info block-more-info_white text_md">
                         <p>
                             Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
@@ -251,7 +252,8 @@
                             </li>
                         </ul>
                     </div>
-                    <button class="show-more btn btn_glass">Більше інформації</button>
+
+                    <button data-open-text="Закрити" data-default-text="Більше інформації" class="show-more btn btn_glass ">Більше інформації</button>
                 </div>
             </div>
         </section>
@@ -346,7 +348,7 @@
                     </div>
 
                 </div>
-                <div class="spoiler">
+                <div class="toggle-content">
                     <div class="block-more-info block-more-info_white text_md">
                         <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
                             та
@@ -377,7 +379,8 @@
                             чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
                             пієлонефриту.</p>
                     </div>
-                    <button class="show-more btn btn_glass ">Більше інформації</button>
+
+                    <button data-open-text="Закрити" data-default-text="Більше інформації" class="show-more btn btn_glass ">Більше інформації</button>
                 </div>
             </div>
         </section>
