--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -170,7 +170,7 @@
                     </div>
 
                 </div>
-                <div class="spoiler">
+                <div class="toggle-content">
                     <div class="block-more-info block-more-info_white text_md hide-info">
                         <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
                             та
