--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -172,7 +172,7 @@
                         шок
                     </li>
                 </ul>
-                <div class="spoiler one">
+                <div class="toggle-content one">
                     <div class="block-more-info block-more-info_white text_md hide-info">
                         <p>
                             Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
@@ -371,7 +371,7 @@
                     </div>
 
                 </div>
-                <div class="spoiler">
+                <div class="toggle-content">
                     <div class="block-more-info block-more-info_white text_md hide-info">
                         <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
                             та
