add card responsive

--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                                             </div>
                                             <div class="popover__info">
                                                 <h5 class="heading_h1">Діти
-                                                    <div class="small">
+                                                    <span class="small">
                                                         до 14 років
-                                                    </div>
+                                                    </span>
                                                 </h5>
                                                 <div class="prescription">
                                                     <div class="prescription__icon">
@@ -319,9 +319,9 @@
                                             </div>
                                             <div class="popover__info">
                                                 <h5 class="heading_h1">Діти
-                                                    <div class="small">
+                                                    <span class="small">
                                                         до 14 років
-                                                    </div>
+                                                    </span>
                                                 </h5>
                                                 <div class="prescription">
                                                     <div class="prescription__icon">
@@ -378,9 +378,9 @@
                                             </div>
                                             <div class="popover__info">
                                                 <h5 class="heading_h1">Діти
-                                                    <div class="small">
+                                                    <span class="small">
                                                         до 14 років
-                                                    </div>
+                                                    </span>
                                                 </h5>
                                                 <div class="prescription">
                                                     <div class="prescription__icon">
