--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -201,7 +201,7 @@
                             чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
                             пієлонефриту.</p>
                     </div>
-                    <button class="show-more btn btn_glass ">Більше інформації</button>
+                    <button data-open-text="Закрити" data-default-text="Більше інформації" class="show-more btn btn_glass ">Більше інформації</button>
                 </div>
             </div>
         </section>
