--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -141,37 +141,39 @@
         </section>
         <section class="consequences" style="background-image: url(assets/img/bg112.png);">
             <div class="container">
-                <div class="section__heading color_white">
-                    <h2 class="heading_h1">
-                        Сечокам'яна хвороба, якщо вчасно не надати допомогу,
-                        може призвести до більш серйозних наслідків:
-                    </h2>
+                <div class="inner-section">
+                    <div class="section__heading color_white">
+                        <h2 class="heading_h1">
+                            Сечокам'яна хвороба, якщо вчасно не надати допомогу,
+                            може призвести до більш серйозних наслідків:
+                        </h2>
+                    </div>
+                    <ul class="consequences-list text_md">
+                        <li class="consequences-list__item frosted">
+                            Проникнення, розвиток
+                            і поширення інфекцій
+                        </li>
+                        <li class="consequences-list__item frosted">
+                            Пієлонефрит та інші захворювання нирок
+                        </li>
+                        <li class="consequences-list__item frosted">
+                            Проблеми з кишечником
+                            - зокрема, парез
+                        </li>
+                        <li class="consequences-list__item frosted">
+                            Скупчення
+                            гнійних утворень
+                        </li>
+                        <li class="consequences-list__item frosted">
+                            Ниркова <br>
+                            недостатність
+                        </li>
+                        <li class="consequences-list__item frosted">
+                            Бактеріальний <br>
+                            шок
+                        </li>
+                    </ul>
                 </div>
-                <ul class="consequences-list text_md">
-                    <li class="consequences-list__item frosted">
-                        Проникнення, розвиток
-                        і поширення інфекцій
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Пієлонефрит та інші захворювання нирок
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Проблеми з кишечником
-                        - зокрема, парез
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Скупчення
-                        гнійних утворень
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Ниркова <br>
-                        недостатність
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Бактеріальний <br>
-                        шок
-                    </li>
-                </ul>
                 <div class="toggle-content one">
                     <div class="block-more-info block-more-info_white text_md hide-info">
                         <p>
@@ -218,7 +220,9 @@
                             </li>
                         </ul>
                     </div>
-                    <button class="show-more btn btn_glass">Більше інформації</button>
+                    <button data-open-text="Закрити" data-default-text="Більше інформації"
+                            class="show-more btn btn_glass ">Більше інформації
+                    </button>
                 </div>
             </div>
         </section>
@@ -402,7 +406,9 @@
                             чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
                             пієлонефриту.</p>
                     </div>
-                    <button class="show-more btn btn_glass ">Більше інформації</button>
+                    <button data-open-text="Закрити" data-default-text="Більше інформації"
+                            class="show-more btn btn_glass ">Більше інформації
+                    </button>
                 </div>
             </div>
         </section>
