add content pages

--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -183,27 +183,27 @@
                 </div>
                 <ul class="consequences-list text_md">
                     <li class="consequences-list__item frosted">
-                        Проникнення, розвиток
-                        і поширення інфекцій
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Пієлонефрит та інші захворювання нирок
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Проблеми з кишечником
-                        - зокрема, парез
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Скупчення
-                        гнійних утворень
-                    </li>
-                    <li class="consequences-list__item frosted">
-                        Ниркова <br>
+                        ниркова <br>
                         недостатність
                     </li>
                     <li class="consequences-list__item frosted">
-                        Бактеріальний <br>
-                        шок
+                        зараження <br>
+                        крові (сепсис)
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        гнійне ураження
+                        нирки (карбункул)
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        гіпертонічні <br>
+                        напади
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        рубцювання <br>
+                        нирки
+                    </li>
+                    <li class="consequences-list__item frosted">
+                        ксантогрануломатоз нирки
                     </li>
                 </ul>
                 <div class="toggle-content one">
@@ -257,14 +257,77 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-reason">
+            <div class="container">
+                <div class="section-reason__heading">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <h2 class="section-reason__title">
+                        <span class="text_uppercase ">ПРИЧИНИ</span><br>
+                        які провокують
+                        виникнення
+                        сечокам’яної
+                        хвороби
+                    </h2>
+                </div>
+
+                <div class="swiper-container reason-slider">
+                    <div class="reason-list swiper-wrapper">
+                        <div class="swiper-slide part part_left">
+                            <div class="reason-list__item reason-list__item_1">
+                                <div class="reason-list__icon">
+                                    <img src="assets/img/svg/1.svg" alt="">
+                                </div>
+                                <p>недотримання правил гігієни</p>
+                            </div>
+
+
+                            <div class="reason-list__item reason-list__item_2">
+                                <div class="reason-list__icon"><img src="assets/img/svg/2.svg" alt=""></div>
+                                <p>сечокам'яна хвороба
+                                    в анамнезії</p>
+                            </div>
+
+                            <div class="reason-list__item reason-list__item_3">
+                                <div class="reason-list__icon"><img src="assets/img/svg/3.svg" alt=""></div>
+                                <p>пухлини
+                                    в сечостатевій системі</p>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide part part_right">
+                            <div class="reason-list__item reason-list__item_4">
+                                <div class="reason-list__icon"><img src="assets/img/svg/4.svg" alt=""></div>
+                                <p>захворювання
+                                    кишечника</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_5">
+                                <div class="reason-list__icon"><img src="assets/img/svg/5.svg" alt=""></div>
+                                <p>нерегулярний
+                                    відтік сечі</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_6">
+                                <div class="reason-list__icon"><img src="assets/img/svg/6.svg" alt=""></div>
+                                <p>аденома
+                                    передміхурової залози</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
         <section class="disease">
             <div class="container">
                 <div class="types-disease">
                     <div class="types-disease__inner">
                         <div class="types-disease__header">
                             <h3 class="types-disease__heading heading_h1">
-                                Залежно <span class="strong"> від локалізації</span> виділяють
-                                декілька видів хвороби
+                                <span class="strong">Шляхи зараження бактеріями</span>
                             </h3>
                         </div>
                         <ul class="disease-list text_md">
@@ -274,9 +337,7 @@
 
                                     </div>
                                 </div>
-                                <h4 class="disease-list__title heading heading_h1">НЕФРОЛІТІАЗ</h4>
-
-                                <div class="disease-list__text">утворення каменів в нирках</div>
+                                <div class="disease-list__text">через недостатню гігієни статевих органів</div>
                             </li>
                             <li class="disease-list__item">
                                 <div class="disease-list__icon">
@@ -284,9 +345,8 @@
 
                                     </div>
                                 </div>
-                                <h4 class="disease-list__title heading heading_h1">Уретеролітіаз</h4>
-
-                                <div class="disease-list__text">наявність каменів в сечоводах</div>
+                                <div class="disease-list__text">затримка
+                                    сечі</div>
                             </li>
                             <li class="disease-list__item">
                                 <div class="disease-list__icon">
@@ -294,9 +354,7 @@
 
                                     </div>
                                 </div>
-                                <h4 class="disease-list__title heading heading_h1">Цістолітіаз</h4>
-
-                                <div class="disease-list__text">наявність каменів в сечовому міхурі</div>
+                                <div class="disease-list__text">порушення кровотоку в нирках</div>
                             </li>
                         </ul>
                     </div>
@@ -310,11 +368,11 @@
                 </h3>
                 <div class="prevention__list">
                     <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/doctor1.svg);"></div>
                         <div class="prevention__text">
-                            Дотримання
-                            правил
-                            гігієни
+                            Звертатися
+                            до лікаря
+                            при кольках
                         </div>
                     </div>
                     <div class="prevention__item">
@@ -340,10 +398,10 @@
                         </div>
                     </div>
                     <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/dumbbell1.svg);"></div>
                         <div class="prevention__text">
-                            Напівпостільний
-                            режим
+                            Бути фізично
+                            активними
                         </div>
                     </div>
 
