--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -337,11 +337,11 @@
                 </h3>
                 <div class="prevention__list">
                     <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/doctor1.svg);"></div>
                         <div class="prevention__text">
-                            Дотримання
-                            правил
-                            гігієни
+                            Звертатися
+                            до лікаря
+                            при кольках
                         </div>
                     </div>
                     <div class="prevention__item">
@@ -367,10 +367,10 @@
                         </div>
                     </div>
                     <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/dumbbell1.svg);"></div>
                         <div class="prevention__text">
-                            Напівпостільний
-                            режим
+                            Бути фізично
+                            активними
                         </div>
                     </div>
 
