--- a/cystitis.html
+++ b/cystitis.html
@@ -91,7 +91,7 @@
 
     </header>
     <div class="backdrop"></div>
-    <main class="main  page">
+    <main class="main  page cystitis">
 
         <div class="container">
             <div class="page__heading frosted">
@@ -156,6 +156,68 @@
                     </li>
 
                 </ul>
+            </div>
+        </section>
+        <section class="section-reason">
+            <div class="container">
+                <div class="section-reason__heading">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <h2 class="section-reason__title">
+                        <span class="text_uppercase ">ПРИЧИНИ</span><br>
+                        які провокують
+                        виникнення
+                        сечокам’яної
+                        хвороби
+                    </h2>
+                </div>
+
+                <div class="swiper-container reason-slider">
+                    <div class="reason-list swiper-wrapper">
+                        <div class="swiper-slide part part_left">
+                            <div class="reason-list__item reason-list__item_1">
+                                <div class="reason-list__icon">
+                                    <img src="assets/img/svg/1.svg" alt="">
+                                </div>
+                                <p>порушення правил особистої гігієни</p>
+                            </div>
+
+
+                            <div class="reason-list__item reason-list__item_2">
+                                <div class="reason-list__icon"><img src="assets/img/svg/2.svg" alt=""></div>
+                                <p>переохолодження загальне і локальне</p>
+                            </div>
+
+                            <div class="reason-list__item reason-list__item_3">
+                                <div class="reason-list__icon"><img src="assets/img/svg/3.svg" alt=""></div>
+                                <p>регелярне
+                                    вживання <br>
+                                    гострої їжі</p>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide part part_right">
+                            <div class="reason-list__item reason-list__item_4">
+                                <div class="reason-list__icon"><img src="assets/img/svg/4.svg" alt=""></div>
+                                <p>вживання <br>
+                                    неякісної води</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_5">
+                                <div class="reason-list__icon"><img src="assets/img/svg/5.svg" alt=""></div>
+                                <p>перенесення <br> генітальної інфекції</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_6">
+                                <div class="reason-list__icon"><img src="assets/img/svg/6.svg" alt=""></div>
+                                <p>психоемоційний <br>
+                                    стрес</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
         </section>
 
