--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -90,7 +90,7 @@
 
     </header>
     <div class="backdrop"></div>
-    <main class="main  page">
+    <main class="main  page sand-kidney">
         <div class="container">
             <div class="page__heading frosted">
                 <h1 class="page__title heading_h1">Пісок <br>
@@ -125,6 +125,64 @@
                 </ul>
             </div>
         </section>
+        <section class="section-reason">
+            <div class="container">
+                <div class="section-reason__heading">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <h2 class="section-reason__title">
+                        <span class="text_uppercase ">ПРИЧИНИ</span><br>
+                        які провокують
+                        виникнення
+                        сечокам’яної
+                        хвороби
+                    </h2>
+                </div>
+
+                <div class="swiper-container reason-slider">
+                    <div class="reason-list swiper-wrapper">
+                        <div class="swiper-slide part part_left">
+                            <div class="reason-list__item reason-list__item_1">
+                                <div class="reason-list__icon">
+                                    <img src="assets/img/svg/1.svg" alt="">
+                                </div>
+                                <p>Спадкова <br> схильність</p>
+                            </div>
+
+
+                            <div class="reason-list__item reason-list__item_2">
+                                <div class="reason-list__icon"><img src="assets/img/svg/2.svg" alt=""></div>
+                                <p>Проблеми <br> з нирками і органами</p>
+                            </div>
+
+                            <div class="reason-list__item reason-list__item_3">
+                                <div class="reason-list__icon"><img src="assets/img/svg/3.svg" alt=""></div>
+                                <p>Незбалансований раціон харчування</p>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide part part_right">
+                            <div class="reason-list__item reason-list__item_4">
+                                <div class="reason-list__icon"><img src="assets/img/svg/4.svg" alt=""></div>
+                                <p>Брак поживних <br> речовин та вітамінів</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_5">
+                                <div class="reason-list__icon"><img src="assets/img/svg/5.svg" alt=""></div>
+                                <p>Зневоднення <br> організму</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_6">
+                                <div class="reason-list__icon"><img src="assets/img/svg/6.svg" alt=""></div>
+                                <p>проблема <br> з обміном речовин</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
         <section class="prevention">
             <div class="container">
                 <h3 class="prevention__heading heading_xxl">
@@ -132,40 +190,35 @@
                 </h3>
                 <div class="prevention__list">
                     <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/cupcake1.svg);"></div>
                         <div class="prevention__text">
-                            Дотримання
-                            правил
-                            гігієни
+                            Обмежити солодке харчування
                         </div>
                     </div>
                     <div class="prevention__item">
                         <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
                         <div class="prevention__text">
-                            Мінімізувати
-                            вживання алкоголю
+                            Виключити вживання алкоголю
                         </div>
                     </div>
                     <div class="prevention__item">
                         <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
                         <div class="prevention__text">
-                            Правильний раціон
-                            харчування
+                            Правильний раціон харчування
                         </div>
                     </div>
                     <div class="prevention__item">
                         <div class="prevention__icon"
                              style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
                         <div class="prevention__text">
-                            Випивати добову
-                            норму води
+                            Регулярний прийом питної води
                         </div>
                     </div>
                     <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/dumbbell1.svg);"></div>
                         <div class="prevention__text">
-                            Напівпостільний
-                            режим
+                            Бути фізично
+                            активними
                         </div>
                     </div>
 
