add card responsive

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <h3 class="diagnoses-list__title"><span class="text">ЦИСТИТ</span></h3>
 
                         <div class="wrap-btn">
-                            <button class="btn btn_main">Детальніше</button>
+                            <a href="cystitis.html" class="btn btn_main">Детальніше</a>
                         </div>
                     </li>
                     <li class="diagnoses-list__item">
@@ -144,7 +144,7 @@
                         <h3 class="diagnoses-list__title">
                             <span class="text">ПІСОК У НИРКАХ</span></h3>
                         <div class="wrap-btn">
-                            <button class="btn btn_main">Детальніше</button>
+                            <a href="sand-kidney.html" class="btn btn_main">Детальніше</a>
                         </div>
                     </li>
                     <li class="diagnoses-list__item">
@@ -156,7 +156,7 @@
                             <span class="text">СЕЧОКАМ’ЯНА ХВОРОБА</span>
                         </h3>
                         <div class="wrap-btn">
-                            <button class="btn btn_main">Детальніше</button>
+                            <a href="urolithiasis.html" class="btn btn_main">Детальніше</a>
                         </div>
                     </li>
                     <li class="diagnoses-list__item">
@@ -166,7 +166,7 @@
                         </div>
                         <h3 class="diagnoses-list__title"><span class="text">ПІЄЛОНЕФРИТ</span></h3>
                         <div class="wrap-btn">
-                            <button class="btn btn_main">Детальніше</button>
+                            <a href="pyelonephritis.html" class="btn btn_main">Детальніше</a>
                         </div>
 
                     </li>
