add card responsive section help

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <span class="pulse"></span>
                         </div>
                         <h3 class="diagnoses-list__title">
-                            <span class="text">ПІСОК У НИРКАХ</span></h3>
+                            <span class="text">ПІСОК <br> У НИРКАХ</span></h3>
                         <div class="wrap-btn">
                             <a href="sand-kidney.html" class="btn btn_main">Детальніше</a>
                         </div>
