add card responsive section help

--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -92,7 +92,8 @@
     <div class="backdrop"></div>
     <main class="main  page page-pyelonephritis">
         <div class="container">
-
+            <a href="index.html" class="link-back"><img src="assets/img/svg/arrow-left.svg" alt=""
+                                                        class="icon-back"> На головну</a>
             <div class="page__heading frosted">
                 <h1 class="page__title heading_h1">Пієлонефрит</h1>
                 <div class="page__sub-title heading_h4">
