--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -92,6 +92,8 @@
     <div class="backdrop"></div>
     <main class="main  page sand-kidney">
         <div class="container">
+            <a href="index.html" class="link-back"><img src="assets/img/svg/arrow-left.svg" alt=""
+                                                        class="icon-back"> На головну</a>
             <div class="page__heading frosted">
                 <h1 class="page__title heading_h1">Пісок <br>
                     у нирках</h1>
