--- a/cystitis.html
+++ b/cystitis.html
@@ -94,6 +94,8 @@
     <main class="main  page cystitis">
 
         <div class="container">
+            <a href="index.html" class="link-back"><img src="assets/img/svg/arrow-left.svg" alt=""
+                                                        class="icon-back"> На головну</a>
             <div class="page__heading frosted">
                 <h1 class="page__title heading_h1">Цистит</h1>
                 <div class="page__sub-title heading_h4">
