--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -92,6 +92,8 @@
     <div class="backdrop"></div>
     <main class="main  page">
         <div class="container">
+            <a href="index.html" class="link-back"><img src="assets/img/svg/arrow-left.svg" alt=""
+                                                        class="icon-back"> На головну</a>
             <div class="page__heading frosted">
                 <h1 class="page__title heading_h1">Сечокам’яна
                     хвороба</h1>
@@ -367,7 +369,8 @@
                         </div>
                     </div>
                     <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/dumbbell1.svg);"></div>
+                        <div class="prevention__icon"
+                             style="background-image: url(assets/img/svg/dumbbell1.svg);"></div>
                         <div class="prevention__text">
                             Бути фізично
                             активними
