add card responsive section help

--- a/page-composition.html
+++ b/page-composition.html
@@ -290,8 +290,12 @@ Humulus lupulus
             </div>
         </div>
         <div class="disclaimer frosted">
-        <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
-        alt="Самолікування може бути шкідливим для вашого здоров'я">
+            <picture>
+                <source srcset="assets/img/svg/disclaimer-mob.svg" media="(max-width: 580px)">
+                <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
+                     alt="Самолікування може бути шкідливим для вашого здоров'я">
+            </picture>
+
         </div>
     </footer>
 </div>
